# -----------------------------------------------------------------------------
# SerdeYML - A robust Rust library for YAML serialization and deserialization.
# -----------------------------------------------------------------------------

[package]
# General project metadata
name = "serde_yml"                              # The name of the library
version = "0.0.13"                              # Version of the crate
authors = ["Serde YML Contributors"]            # Library contributors
edition = "2021"                                # Rust edition being used
rust-version = "1.58.0"                         # Minimum supported Rust version
license = "MIT OR Apache-2.0"                   # Dual licensing strategy
description = """
A robust Rust library that simplifies the serialization and deserialization of Rust data structures to and from YAML format using the widely-used Serde framework.
"""                                             # Library description
homepage = "https://serdeyml.com"               # Project homepage
documentation = "https://docs.rs/serde_yml/"    # Documentation URL
repository = "https://github.com/sebastienrousseau/serde_yml" # Repository URL
readme = "README.md"                            # Path to the README file

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

# Crates.io categories
categories = [
    "encoding",
    "parser-implementations",
]

# Keywords for easier discoverability on Crates.io
keywords = [
    "yaml",
    "serde",
    "serialization",
]

# Exclude unnecessary files from the package
exclude = [
    "/.git/*",                                  # Exclude version control files
    "/.github/*",                               # Exclude GitHub workflows
    "/.gitignore",                              # Ignore Git ignore file
    "/.vscode/*"                                # Ignore VSCode settings
]

include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

[lib]
name = "serde_yml"                              # Internal name of the library
path = "src/lib.rs"                             # Path to the library source
crate-type = ["lib"]                            # Crate type
required-features = []

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
default = []                                    # No default features enabled

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
version_check = "0.9.5"                         # Ensures compatible version

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
indoc = "2.0.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
indexmap = "2.7.0"
itoa = "1.0.14"
libyml = "0.0.5"
memchr = { version = "2", default-features = false }
ryu = "1.0"
serde = "1.0.217"

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------

[package.metadata.docs.rs]
all-features = true     # Build documentation with all features enabled
rustdoc-args = [
    "--generate-link-to-definition",
    "--cfg", "docsrs",
    "--document-private-items",
    "--display-warnings",
]
targets = ["x86_64-unknown-linux-gnu"]    # Default target platform for the docs

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------

[lints.rust]
## Warn
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

# -----------------------------------------------------------------------------
# Clippy Configuration
# -----------------------------------------------------------------------------

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------

[profile.dev]
codegen-units = 256                         # Fast compilation for development
debug = true                                # Enable debugging symbols
incremental = true                          # Incremental compilation
opt-level = 0                               # No optimizations in development

[profile.release]
codegen-units = 1                           # Optimized for performance
debug = false                               # Disable debug symbols
incremental = false                         # Disable incremental compilation
lto = true                                  # Link-time optimization
opt-level = "s"                             # Optimize for size

[profile.test]
codegen-units = 256                         # Fast compilation for testing
debug = true                                # Enable debugging symbols
